Comprehensive fix for Vercel build issues

--- a/.env.production
+++ b/.env.production
@@ -2,12 +2,19 @@
 # These are publicly visible in the repo, so don't put any actual secrets here
 # Use Vercel's environment variables UI instead for real secrets
 
-# Make sure these basic settings are available during build
-NEXTAUTH_SECRET=stocksage-next-auth-secret-key-2025-production
-NEXTAUTH_URL=https://stocksage-osbt6m1ry-nipurns-projects-738e757b.vercel.app
+# NextAuth Configuration - Needed for build
+NEXTAUTH_SECRET=stocksage-next-auth-secret-key-for-vercel-build
+NEXTAUTH_URL=https://stocksage-e0osexy9m-nipurns-projects-738e757b.vercel.app
 
-# Database placeholder (will be overridden by Vercel environment variable)
-DATABASE_URL="file:./prisma/dev.db"
+# Build-specific flags
+SKIP_ENV_VALIDATION=true
+SKIP_PRISMA_INIT=true
 
-# Gemini API Key (will be overridden by Vercel environment variable)
-GEMINI_API_KEY="placeholder-replace-in-vercel-dashboard" 
+# Database placeholder - This will be replaced by Vercel environment variables
+DATABASE_URL="postgresql://dummy:dummy@localhost:5432/dummy"
+
+# API placeholders - Will be replaced by Vercel environment variables
+GEMINI_API_KEY="placeholder-for-build"
+STRIPE_SECRET_KEY="placeholder-for-build"
+STRIPE_PUBLISHABLE_KEY="placeholder-for-build"
+STRIPE_WEBHOOK_SECRET="placeholder-for-build" 
