--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node vercel-build.js",
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node prisma/seed.ts",
@@ -14,6 +14,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/nextjs": "^6.12.5",
+    "@clerk/themes": "^2.2.22",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^4.1.3",
@@ -24,17 +27,21 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jspdf": "^1.3.3",
     "@types/stripe": "^8.0.416",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "html-to-pdfmake": "^2.5.1",
+    "jose": "^6.0.10",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.482.0",
-    "next": "14.0.3",
+    "next": "^15.2.3",
     "next-auth": "^4.24.5",
+    "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "pdfkit": "^0.14.0",
     "pdfmake": "^0.2.7",
     "react": "^18",
@@ -42,10 +49,12 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
     "stripe": "^14.25.0",
     "tailwind-merge": "^3.0.2",
+    "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -56,7 +65,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3",
+    "eslint-config-next": "^15.2.3",
     "postcss": "^8.4.31",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.3.0",
